# bot

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.json
backend/app/: main.py
backend/app/agents/: base.py  events.py
backend/app/api/: deps.py
backend/app/auth/: crypto.py  db_models.py  errors.py  mentee_profile_client.py  oauth_client.py  service.py  session_store.py  state_store.py
backend/app/budget/: __init__.py  db_models.py  pricing.py  provider_errors.py  providers.py  service.py  usage.py
backend/app/core/: config.py  observability.py  posthog_client.py  rate_limit.py
backend/app/db/: engine.py
backend/app/domain/: models.py
backend/app/reports/: db_models.py  email.py  schemas.py  service.py
backend/app/services/: db_models.py  feedback_config_service.py  message_service.py  pg_thread_store.py  thread_store.py
backend/scripts/: eval_prompts.py  eval_prompts_v2.py  eval_results.jsonl  eval_results_v2.jsonl  eval_rubric.md  eval_run.py  eval_run_v2.py  eval_score.py  eval_score_v2.py  inspect_user_auth.py  monitor_disclaimer_rate.py  test_url_allowlist.py
backend/tests/: conftest.py  test_chat.py  test_chat_stream.py  test_pg_thread_store.py
backend/tests/agents/: conftest.py  test_career_tool.py  test_fallback.py  test_fallback_no_key.py  test_history_converter.py  test_mentee_agent_basic.py  test_perplexity_tool.py  test_scope_guardrail.py  test_stream_tool_events.py
frontend/: .cta.json  (+18 more)
(+195 files in other folders)
