[project]
name = "mentee-bot-backend"
version = "0.1.0"
description = "FastAPI service for the Mentee bot"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.135",
  "uvicorn[standard]>=0.44",
  "pydantic>=2.13",
  "pydantic-settings>=2.6",
  "httpx>=0.28",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
