[project]
name = "mentee-bot-backend"
version = "0.1.0"
description = "FastAPI service for the Mentee bot"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]>=0.135",
  "pydantic>=2.13",
  "pydantic-settings>=2.6",
  "httpx>=0.28",
  "authlib>=1.6,<1.7",
  "cryptography>=43.0",
  "sqlmodel>=0.0.22",
  "sqlalchemy>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "psycopg2-binary>=2.9",
  "greenlet>=3.4.0",
  "logfire[fastapi,httpx]>=4.32.1",
  "pydantic-ai>=0.3",
  "openai>=1.50",
  "perplexityai>=0.32.0",
]

[dependency-groups]
dev = [
  "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["app/db/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.ruff.lint.per-file-ignores]
# System prompts are prose; long prose lines are more readable than wrapped.
"app/agents/mentee/prompts.py" = ["E501"]
